<resources>
    <string name="app_name">GeldKompass</string>
    <string name="title_activity_main_map_atm_display">GeldKompass</string>
    <string name="no_internet_alert_DE">Keine Internetverbindung! Überprüfen Sie das Interneterbindung und versuchen Sie es erneut.</string>
    <string name="out_of_bounds_alert_DE">Diese App funktioniert nur innerhalb Deutschlands.</string>
    <string name="out_of_bounds_alert_DE2">Diese Funktion funktioniert nur innerhalb Deutschlands.</string>
    <string name="on_failure_alert_DE">Es tut uns Leid! Der Server antwortet nicht. Versuchen Sie es später erneut.</string>
    <string name="no_result_alert_DE">Keine Ergebnisse im Umkreis von 1500m für die von Ihnen gesuchte Bankgruppe gefunden! Die Suche wird erweitert, um nach dem nächsten Geldautomat in Ihrer Nähe zu suchen.</string>
    <string name="no_result_distance_alert_DE">Keine Ergebnisse! Es befindet sich kein Geldautomat in diesem Gebiet. Es tut uns Leid!</string>
    <string name="no_result_alert_list_DE">Keine Ergebnisse! Die von Ihnen eingestellte Suche liefert keine Ergebnisse. Es befindet sich kein Geldautomat in diesem Gebiet. Es tut uns Leid!</string>
    <string name="no_result_alert_cash_group_DE">Keine Ergebnisse! Es befindet sich kein Geldautomat der CashGroup in diesem Gebiet. Es tut uns Leid!</string>
    <string name="no_result_alert_cash_pool_DE">Keine Ergebnisse! Es befindet sich kein Geldautomat des CashPools in diesem Gebiet. Es tut uns Leid!</string>
    <string name="no_result_alert_sparkasse_DE">Keine Ergebnisse! Es befindet sich kein Geldautomat der Sparkasse in diesem Gebiet. Es tut uns Leid!</string>
    <string name="no_result_alert_volksbank_DE">Keine Ergebnisse! Es befindet sich kein Geldautomat der Volksbank Gruppe in diesem Gebiet. Es tut uns Leid!</string>
    <string name="general_error">Es tut uns Leid! Ein unbekanter Fehler ist aufgetreten.</string>
    <string name="map_error">Es tut uns Leid! Ein Fehler beim Kartenladen ist aufgetreten. Bitte versuchen Sie es erneut.</string>
    <string name="location_permission_title_DE">Achtung</string>
    <string name="general_error_message_title">Error Message</string>
    <string name="location_permission_body_DE">Um diese App benutzen zu können, benötigen wir Zugang zu dem Standort Ihres Gerätes</string>
    <string name="location_permission_gps_not_enabled">Um diese App benutzen zu können, benötigen wir Zugang zu dem Standort Ihres Gerätes. Bitte aktivieren Sie die GPS-Funktion Ihres Gerätes.</string>
    <string name="permission_granted_DE">Erlaubnis erteilt</string>
    <string name="permission_denied_DE">Erlaubnis verweigert</string>
    <string name="nav_bar_title_no_result">Standort wird ermittelt</string>
    <string name="nav_bar_title_done">In der Nähe von: </string>
    <string name="error_dialog_button_text">OK</string>
    <string name="error_dialog_permission_button_positive">Erlauben</string>
    <string name="error_dialog_permission_button_negative">Nein</string>
    <string name="report_form_button_text">Abschicken</string>
    <string name="KEY_for_atms">cache_save_atms_KEY</string>
    <string name="KEY_for_timestamp">cache_save_timestamp_KEY</string>
    <string name="KEY_for_latitude">cache_save_latitude_KEY</string>
    <string name="KEY_for_longitude">cache_save_longitude_KEY</string>
    <string name="KEY_for_last_location_latitude">cache_save_last_location_lat</string>
    <string name="KEY_for_last_location_longitude">cache_save_last_location_lng</string>
    <string name="app_version">6.11</string>
    <string name="copyright">© 2018 – 2019 Krisztian Cseh</string>
    <string name="main_tab_first">Karte</string>
    <string name="main_tab_second">Liste</string>
    <string name="mi_report_missing">Geldautomat melden</string>
    <string name="mi_about">Info</string>
    <string name="mi_datenschutz">Datenschutz</string>
    <string name="report_title">
        Hier können Sie uns: fehlende, fehlplatzierte oder doppelt angezeigte Bankautomaten mitteilen.
        Um den Prozess zu beschleunigen, werden Ihre anonymisierte Standort-Daten automatisch erfasst.
        Vielen Dank für Ihre Mithilfe!</string>
    <string name="report_permission_dialog_body">Die Folgende Funktion benötigt Ihr Einverständnis, uns Ihren Standort mitzuteilen.
        Der gesamte Prozess ist automatisiert und KEINE DATEN werden gespeichert.
        Falls Sie nicht zustimmen, wählen Sie "Nein". Sie werden die App wie gewohnt weiternutzen können.</string>
    <string-array name="report_spinner_problem">
        <item>Ein fehlender Geldautomat</item>
        <item>Ein Fehlplatzierter Geldautomat</item>
        <item>Ein doppelt angezeigter Geldautomat</item>
        <item>Ein nicht mehr existierender Geldautomat</item>
    </string-array>
    <string-array name="report_spinner_banks">
        <item>Sparkasse</item>
        <item>Volksbank Gruppe</item>
        <item>Deutsche Bank</item>
        <item>Commerzbank</item>
        <item>Postbank</item>
        <item>Sparda-Bank</item>
        <item>BBBank</item>
        <item>TargoBank</item>
        <item>PSD Bank</item>
        <item>Santander</item>
        <item>HypoVereinsbank</item>
        <item>Apotheker und Ärztebank</item>
        <item>Degussa Bank</item>
        <item>BW Bank</item>
        <item>Oldenburgische Landesbank</item>
        <item>Südwestbank</item>
        <item>ING DiBa</item>
        <item>Pax-Bank</item>
        <item>andere</item>
    </string-array>
    <string name="question1">Was möchten Sie uns mitteilen?</string>
    <string name="question2">Gehört der Bankautomat, über den Sie berichten möchten, zu einem der folgenden Bankinstitute? (Falls nicht, wählen Sie "andere" am Ende der Liste)</string>
    <string name="app_logo_credentials">Das Logo ist ein geändertes Modell des Logos des Autors Freepik von www.flaticon.com</string>
    <string name="logo_credentials_bbbank">Das BBBank-Logo ist Eigentum von BBBank eG.</string>
    <string name="logo_credentials_degussa_bank">Das Degussa Bank-Logo ist Eigentum von Degussa Bank AG.</string>
    <string name="logo_credentials_sudwestbank">Das Südwestbank-Logo ist Eigentum von Südwestbank AG.</string>
    <string name="logo_credentials_disclaimer">All die oben genannten Logos werden mit Erlaubnis des Eigentümers verwendet.</string>
</resources>