<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/about_screen"
    android:background="@android:color/white">

    <ImageView
        android:contentDescription="@null"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:layout_gravity="center"
        android:layout_marginTop="90dp"
        android:src="@drawable/app_logo5" />

    <TextView
        android:layout_width="match_parent"
        android:gravity="center"
        android:layout_height="20dp"
        android:text="@string/app_version"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="20dp"
        android:gravity="center"
        android:text="@string/copyright"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="10dp"
        android:gravity="center"
        android:text="@string/app_logo_credentials"
        android:layout_gravity="center"
        android:layout_marginTop="200dp"
        android:textSize="8sp"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="10dp"
        android:gravity="center"
        android:text="@string/logo_credentials_bbbank"
        android:layout_gravity="center"
        android:layout_marginTop="5dp"
        android:textSize="8sp"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="10dp"
        android:gravity="center"
        android:text="@string/logo_credentials_degussa_bank"
        android:layout_gravity="center"
        android:layout_marginTop="5dp"
        android:textSize="8sp"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="10dp"
        android:gravity="center"
        android:text="@string/logo_credentials_sudwestbank"
        android:layout_gravity="center"
        android:layout_marginTop="5dp"
        android:textSize="8sp"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="10dp"
        android:gravity="center"
        android:text="@string/logo_credentials_disclaimer"
        android:layout_gravity="center"
        android:layout_marginTop="5dp"
        android:textSize="8sp"/>

</LinearLayout>
