<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="#ffffffff">

    <ImageView
        android:contentDescription="@null"
        android:layout_width="match_parent"
        android:layout_height="120dp"
        android:id="@+id/custom_attention_logo"
        android:gravity="center"
        android:background="@color/colorSecondary"
        android:scaleType="fitCenter" />

    <ImageView
        android:contentDescription="@null"
        android:id="@+id/custom_attention_logo2"
        android:layout_width="match_parent"
        android:layout_height="120dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:background="@color/colorSecondary"
        android:gravity="center"
        android:paddingBottom="20dp"
        android:paddingTop="20dp"
        android:scaleType="fitCenter"
        android:src="@drawable/ic_dialog_image" />

    <TextView
        android:id="@+id/custom_attention_logo_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="18dp"
        android:text="!"
        android:textColor="@color/white"
        android:textSize="60sp" />


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/general_error_message_title"
        android:id="@+id/custom_attention_text_dialog"
        android:layout_below="@+id/custom_attention_logo"
        android:layout_marginTop="20dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="20dp"
        android:textSize="18sp"
        android:textColor="#ff000000"
        android:layout_centerHorizontal="true"
        android:gravity="center_horizontal" />


        <Button
            android:id="@+id/custom_dialog_attention_btn_accept"
            android:layout_width="120dp"
            android:layout_height="31.56dp"
            android:layout_marginBottom="20dp"
            android:layout_marginStart="10dp"
            android:background="@drawable/ic_dialog_button3"
            android:textColor="#ffffffff"
            android:text="@string/error_dialog_permission_button_positive"
            android:textSize="22sp"
            android:textAlignment="center"
            android:layout_below="@+id/custom_attention_text_dialog"/>

        <Button
            android:id="@+id/custom_dialog_attention_btn_denied"
            android:layout_width="120dp"
            android:layout_height="31.56dp"
            android:layout_marginBottom="20dp"
            android:layout_marginStart="160dp"
            android:layout_marginEnd="10dp"
            android:background="@drawable/ic_dialog_button3"
            android:text="@string/error_dialog_permission_button_negative"
            android:textColor="#ffffffff"
            android:textSize="22sp"
            android:layout_below="@+id/custom_attention_text_dialog" />


</RelativeLayout>